--- a/BlazorId/Client/Shared/NavMenu.razor
+++ b/BlazorId/Client/Shared/NavMenu.razor
@@ -39,15 +39,18 @@
                     <NavLink class="nav-link" href="courses">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Courses
                     </NavLink>
-                </div>
+                </div>            
             </AuthorizeView>
+             <AuthorizeView Roles="Teacher">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="dailyAttendances">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Attendances
+                    </NavLink>
+                </div>
+             </AuthorizeView>
+
             <AuthorizeView>
-                <Authorized>
-                    <div class="nav-item px-3">
-                        <NavLink class="nav-link" href="dailyAttendances">
-                            <span class="oi oi-list-rich" aria-hidden="true"></span> Attendances
-                        </NavLink>
-                    </div>
+                <Authorized>                   
                     <div class="nav-item px-3">
                         <NavLink class="nav-link" href="notations">
                             <span class="oi oi-list-rich" aria-hidden="true"></span> Notations
