--- a/BlazorId/Client/Pages/User/Trainings.razor
+++ b/BlazorId/Client/Pages/User/Trainings.razor
@@ -143,7 +143,7 @@ else
     private async Task ShowDetail(bool show,int id)
     {
         showDetail = show;
-        courses = await client.HttpClient.GetFromJsonAsync<List<Course>>("api/Courses/" + id);
+        courses = await client.HttpClient.GetFromJsonAsync<List<Course>>("api/Courses/Training/" + id);
     }
     private void Select(int courseid)
     {
