--- a/BlazorId/Client/Pages/User/UserCourses.razor
+++ b/BlazorId/Client/Pages/User/UserCourses.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Authorization;
 @using BlazorId.Shared;
 @inject HttpClient client
+@inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider authenticationStateProvider
 
 @attribute [Authorize]
@@ -47,5 +48,7 @@ else
         objuserCourse.CourseId = Int32.Parse(courseId);
         objuserCourse.UserName = userName;
         await client.PostAsJsonAsync("api/UserCourses", objuserCourse);
+        NavigationManager.NavigateTo("");
+
     }
 }
